--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>This is the index page</title>
+    <title>Index</title>
   </head>
   <body>
+    <h1>This is the Index Page.</h1>
 
   </body>
 </html>
