--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Index</title>
+    <title>S.S.A.C.</title>
   </head>
   <body>
-    <h1>This is the Index Page.</h1>
-
+    <div class="container">  <!-- start of body -->
+      <div class="jumbotron">
+        <h1>Super Solar Age Converter</h1>
+        <h4>Convert your age, in Earth years, into equalvalents on different planets!</h4>
+      </div>
+      <form id="solarAgeForm" class="form-group" action="index.html" method="post">
+        <div class="container jumbotron">
+            <label for="user_age">Enter your age in Earth Years</label>
+            <input id="age" type="number" name="user_age" value="1" min="1" max="150">
+            <br>
+            <label class="checkbox-inline"><input type="checkbox" name="le" id="smoker" value="1">I'm a smoker.</label>
+            <label class="checkbox-inline"><input type="checkbox" name="le" id="fat"  value="1">I'm obese.</label>
+            <label class="checkbox-inline"><input type="checkbox" name="le" id="diabetic"  value="1">I'm diabetic.</label>
+            <label class="checkbox-inline"><input type="checkbox" name="le" id="excercise"  value="1">I excercise.</label>
+            <br>
+            <button type="submit" name="button">Submit!</button>
+        </div>
+      </form>
+      <div id="output-box" class="container jumbotron">
+        <h4>Your results are:<span id="results-out"></span></h4>
+      </div>
+    </div>  <!-- end of body -->
   </body>
-</html>
 </html>
